# opened

./: .gitignore  .pylintrc  README.md  __init__.py  coverage.py  setup.cfg  test.py
.github/workflows/: mac_python_3_7.yml  mac_python_3_8.yml  mac_python_3_9.yml  python.yml  ubuntu_python_3_7.yml  ubuntu_python_3_8.yml  ubuntu_python_3_9.yml  windows_python_3_7.yml  windows_python_3_8.yml  windows_python_3_9.yml
opened/: __init__.py  opened.py
opened_rufreakde.egg-info/: PKG-INFO  SOURCES.txt
tests/: console_colors.py  test_url.py
