[metadata]
# replace with your username:
name = opened-rufreakde
version = 0.0.1
url = TODO
author = Rudolf Chrispens
author_email = rudolf.chrispens@web.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = The smarter with open
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7